# android-lint-summary

./: .gitignore  .travis.yml  Main.hs  README.markdown  _config.yml  android-lint-summary.cabal  cabal.config  index.html  params.json  stack.yaml
Tests/: Main.hs
Tests/fixtures/1/: lint-results.xml
Tests/fixtures/3/: lint-results.xml
_includes/: navigation.html
_layouts/: default.html  post.html
_posts/: 2015-07-12-readme.markdown
resources/: logo.ai
src/: AndroidLintSummary.hs
src/AndroidLintSummary/: CLI.hs
