name:                android-lint-summary
version:             0.1.0.0
synopsis:            A summary for Android-Lint errors
description:         An easily digestible overview of errors and warnings from Android Lint.
homepage:            https://github.com/passy/android-lint-summary
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/passy/android-lint-summary.git

executable giflib-api
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base ==4.*
                     , text
                     , hxt
                     , HandsomeSoup
                     , ansi-terminal
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -auto-all
                       -caf-all

Test-Suite hspec-tests
  main-is:             Tests/Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , hspec
                     , QuickCheck
