name:                android-lint-summary
version:             0.2.1
synopsis:            A pretty printer for Android Lint errors
description:         An easily digestible overview of errors and warnings from Android Lint.
homepage:            https://github.com/passy/android-lint-summary
copyright:           2015, Pascal Hartig
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@twitter.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/passy/android-lint-summary.git

flag documentation
  default:             False

library
  exposed-modules:     AndroidLintSummary
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings
                     , Arrows
                     , NoImplicitPrelude
                     , ExistentialQuantification
  build-depends:       base ==4.*
                     , basic-prelude
                     , data-default
                     , directory
                     , filemanip
                     , hxt
                     , lens
                     , mtl
                     , optparse-applicative
                     , rainbow
                     , stringable
                     , terminal-size
                     , text
  if flag(documentation)
    build-depends:     hscolour

  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -- -fwarn-missing-import-lists

executable android-lint-summary
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base ==4.*
                     , android-lint-summary
                     , basic-prelude
                     , data-default
                     , directory
                     , filemanip
                     , mtl
                     , optparse-applicative
                     , rainbow
                     , stringable
                     , terminal-size
                     , text
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -- -fwarn-missing-import-lists

Test-Suite hspec-tests
  main-is:             Tests/Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.9
                     , QuickCheck
                     , android-lint-summary
                     , basic-prelude
                     , directory
                     , hspec
                     , hxt
                     , stringable
